--- a/.github/workflows/run-example.yml
+++ b/.github/workflows/run-example.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   example:
     runs-on: ubuntu-latest
+    continue-on-error: true
 
     strategy:
       matrix:
@@ -17,6 +18,10 @@ jobs:
           - { queue: 'php80-phpseclib2', php: '8.0', phpseclib: '2.0'}
           - { queue: 'php81-phpseclib2', php: '8.1', phpseclib: '2.0'}
           - { queue: 'php82-phpseclib2', php: '8.2', phpseclib: '2.0'}
+          - { queue: 'php74-phpseclib3', php: '7.4', phpseclib: '3.0'}
+          - { queue: 'php80-phpseclib3', php: '8.0', phpseclib: '3.0'}
+          - { queue: 'php81-phpseclib3', php: '8.1', phpseclib: '3.0'}
+          - { queue: 'php82-phpseclib3', php: '8.2', phpseclib: '3.0'}
 
     name: PHP ${{ matrix.payload.php }} - phpseclib ${{ matrix.payload.phpseclib }}
 
