--- a/.github/workflows/run-example.yml
+++ b/.github/workflows/run-example.yml
@@ -14,14 +14,16 @@ jobs:
       matrix:
         db: ['mysql', 'pgsql']
         payload:
-          - { queue: 'php74-phpseclib2', php: '7.4', phpseclib: '2.0'}
-          - { queue: 'php80-phpseclib2', php: '8.0', phpseclib: '2.0'}
-          - { queue: 'php81-phpseclib2', php: '8.1', phpseclib: '2.0'}
-          - { queue: 'php82-phpseclib2', php: '8.2', phpseclib: '2.0'}
-          - { queue: 'php74-phpseclib3', php: '7.4', phpseclib: '3.0'}
-          - { queue: 'php80-phpseclib3', php: '8.0', phpseclib: '3.0'}
-          - { queue: 'php81-phpseclib3', php: '8.1', phpseclib: '3.0'}
-          - { queue: 'php82-phpseclib3', php: '8.2', phpseclib: '3.0'}
+#          - { php: '7.4', phpseclib: '2.0'}
+#          - { php: '8.0', phpseclib: '2.0'}
+#          - { php: '8.1', phpseclib: '2.0'}
+#          - { php: '8.2', phpseclib: '2.0'}
+#          - { php: '7.4', phpseclib: '3.0'}
+#          - { php: '8.0', phpseclib: '3.0'}
+#          - { php: '8.1', phpseclib: '3.0'}
+          - { php: '8.2.1', phpseclib: '3.0'}
+          - { php: '8.2.2', phpseclib: '3.0'}
+          - { php: '8.2.3', phpseclib: '3.0'}
 
     name: PHP ${{ matrix.payload.php }} - phpseclib ${{ matrix.payload.phpseclib }}
 
