--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
         "google/auth": "^1.28",
-        "phpseclib/phpseclib": "^2.0|^3.0"
+        "phpseclib/phpseclib": "^3.0"
     }
 }
